Fixes a bug where string-ids did break the generated code.
