# internal/simple/ent/http/request.go
@@ -4,44 +4,44 @@ package http
 
 // Payload of a ent.Category create request.
 type CategoryCreateRequest struct {
-	Name *string `json:"name"`
-	Pets []int   `json:"pets"`
+	Name *string  `json:"name"`
+	Pets []string `json:"pets"`
 }
 
 // Payload of a ent.Category update request.
 type CategoryUpdateRequest struct {
-	Name *string `json:"name"`
-	Pets []int   `json:"pets"`
+	Name *string  `json:"name"`
+	Pets []string `json:"pets"`
 }
 
 // Payload of a ent.Owner create request.
 type OwnerCreateRequest struct {
-	Name *string `json:"name"`
-	Age  *int    `json:"age"`
-	Pets []int   `json:"pets"`
+	Name *string  `json:"name"`
+	Age  *int     `json:"age"`
+	Pets []string `json:"pets"`
 }
 
 // Payload of a ent.Owner update request.
 type OwnerUpdateRequest struct {
-	Name *string `json:"name"`
-	Age  *int    `json:"age"`
-	Pets []int   `json:"pets"`
+	Name *string  `json:"name"`
+	Age  *int     `json:"age"`
+	Pets []string `json:"pets"`
 }
 
 // Payload of a ent.Pet create request.
 type PetCreateRequest struct {
-	Name     *string `json:"name"`
-	Age      *int    `json:"age"`
-	Category []int   `json:"category"`
-	Owner    *int    `json:"owner"`
-	Friends  []int   `json:"friends"`
+	Name       *string  `json:"name"`
+	Age        *int     `json:"age"`
+	Categories []int    `json:"categories"`
+	Owner      *int     `json:"owner"`
+	Friends    []string `json:"friends"`
 }
 
 // Payload of a ent.Pet update request.
 type PetUpdateRequest struct {
-	Name     *string `json:"name"`
-	Age      *int    `json:"age"`
-	Category []int   `json:"category"`
-	Owner    *int    `json:"owner"`
-	Friends  []int   `json:"friends"`
+	Name       *string  `json:"name"`
+	Age        *int     `json:"age"`
+	Categories []int    `json:"categories"`
+	Owner      *int     `json:"owner"`
+	Friends    []string `json:"friends"`
 }
